--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Arte Generativa
+title: Computação+Arte
 subtitle: 'by lumakhl'
 description: 'Um blog sobre um projeto de arte e computação'
 keywords:
